--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,26 +14,4 @@ jobs:
 
     steps:
     – name: Checkout repository
-      uses: actions/checkout
-
-    – name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
-
-    – name: Login to Docker Hub
-      uses: docker/login-action@v1
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
-
-    – name: Set up QEMU
-      uses: docker/setup-qemu-action@v1
-
-    – name: Build and push Docker images
-      uses: docker/build-push-action@v2
-      with:
-        context: .
-        push: true
-        tags: user/repo:latest
-
-    – name: Run Docker Compose
-      run: docker-compose up -d
+      uses: actions/checkout@v2
