--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,27 +16,27 @@ jobs:
       IMAGE_NAME: test_cicd
       PROJECT_ID: che-343825
     steps:
-    – name: Checkout repository
+    - name: Checkout repository
       uses: actions/checkout@v2
 
-    – name: Set up Docker Buildx
+    - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
 
-    – name: Login to Docker Hub
+    - name: Login to Docker Hub
       uses: docker/login-action@v1
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
-    – name: Set up QEMU
+    - name: Set up QEMU
       uses: docker/setup-qemu-action@v1
 
-    – name: Build and push Docker images
+    - name: Build and push Docker images
       uses: docker/build-push-action@v2
       with:
         context: .
         push: true
         tags: user/repo:latest
 
-    – name: Run Docker Compose
+    - name: Run Docker Compose
       run: docker-compose up -d
