--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,11 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
+    - name: Run docker-compose
+      uses: hoverkraft-tech/compose-action@v2.0.1
+      with:
+         compose-file: "./docker-compose.yml"
 
-
-    - name: Run Docker Compose
-      run: docker-compose up -d
+    #- name: Execute tests in the running services
+    #  run: |
+    #    docker-compose exec test-app pytest
