--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Run docker-compose
       uses: hoverkraft-tech/compose-action@v2.0.1
       with:
-         compose-file: "./docker-compose.yml"
+         compose-file: "./compose.yml"
 
     #- name: Execute tests in the running services
     #  run: |
