--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,19 +10,30 @@ on:
 
 jobs:
   build:
-    name: build
     runs-on: ubuntu-latest
-    env:
-      IMAGE_NAME: test_cicd
-      PROJECT_ID: che-343825
+
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
-    - name: Run docker-compose
-      uses: hoverkraft-tech/compose-action@v2.0.1
-      with:
-         compose-file: "./compose.yml"
 
-    #- name: Execute tests in the running services
-    #  run: |
-    #    docker-compose exec test-app pytest
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
+
+    - name: Login to Docker Hub
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_TOKEN }}
+
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v1
+
+    - name: Build and push Docker images
+      uses: docker/build-push-action@v2
+      with:
+        context: .
+        push: true
+        tags: user/repo:latest
+
+    - name: Run Docker Compose
+      run: docker-compose up -d
