--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,4 +36,4 @@ jobs:
         tags: karbyshevdm/myrep:latest
 
     - name: Run Docker Compose
-      run: docker-compose up -d
+      run: docker compose up -d
